--- a/digztr/package.json
+++ b/digztr/package.json
@@ -25,7 +25,8 @@
     "react-snapshot": "^1.3.0",
     "redux": "^3.7.2",
     "redux-router": "^2.1.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "mo-js": "0.288.1"
   },
   "scripts": {
     "start": "react-scripts start",
