--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.17.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "compression": "^1.7.1",
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
@@ -32,12 +33,13 @@
     "jquery": "^3.2.1",
     "knox": "^0.9.2",
     "method-override": "^2.3.10",
-    "mongoose": "^4.13.4",
+    "mongoose": "^4.13.9",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.14.11",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "react-scripts": "^1.0.17",
     "winston": "^2.4.0"
   }
 }
